fix text overflow on the order page.

--- a/assets/scss/pages/_restaurant.scss
+++ b/assets/scss/pages/_restaurant.scss
@@ -209,6 +209,7 @@
 			@include background-size(100% 300px);
 		}
         h1 {
+            @include text-overflow();
         	font-size: $baseFontSize;
         	line-height: 30px;
         	text-align: center;
